# chatbot_winzerfest

./: README.md
with_PDF_context/: chatbot.ipynb  pyproject.toml
with_RAG/: .gitignore  README.md  app.py  chatbot.py  config.py  data_loader.py  data_scraping.ipynb  main.py  pyproject.toml  requirements.txt  vector_store.py
with_RAG/data/: program.json  program.txt  scraped_offers.json  scraped_offers.txt
with_RAG/notebooks/: data_scraping.ipynb  prototype_chatbot.ipynb
