[project]
name = "with-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.20",
    "dotenv>=0.9.9",
    "gradio>=5.45.0",
    "ipykernel>=6.30.1",
    "openai>=1.107.1",
    "pypdf>=6.0.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
]
